# navigation-system

./: .gitignore  README.md  funcionality.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
navigation_system/: __init__.py
navigation_system/interface/: __init__.py  event_view.py  module_view.py  repository.py  service.py
navigation_system/manager/: __init__.py  controller.py  view_manager.py
navigation_system/navigation/: __init__.py  controller.py  selectable.py  sidebar.py  switch.py  view_manager.py
navigation_system/navigation/interface/: __init__.py  event_view.py  service.py
navigation_system/widget/: __init__.py  icon_text.py  selectable.py  sidebar.py  switch.py
navigation_system/widget/sidebar/: __init__.py  icon_text.py  selectable.py  sidebar.py  switch.py
navigation_system/widgets/: __init__.py  icon_text.py  selectable.py  sidebar.py  switch.py
